tests/ui/unknown_attribute_with_value.stderr
error: proc-macro derive panicked
 --> tests/ui/unknown_attribute_with_value.rs:3:10
  |
3 | #[derive(Arbitrary)]
  |          ^^^^^^^^^
  |
  = help: message: Unknown option for #[arbitrary]: `unknown_attr`
